# miniGameC

./: CMakeLists.txt  LICENSE  Main.c  main  readme.md
src/: Main.c
